# dasom-rs

./: Cargo.toml  README.md
examples/small_balls/: Cargo.toml  README.md
examples/small_balls/src/: main.rs
examples/three_balls/: Cargo.toml  README.md
examples/three_balls/src/: main.rs
src/: camera.rs  color.rs  lib.rs  ray.rs  ray_tracer.rs  real.rs  utility.rs  vector.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/shape/: group.rs  mod.rs  sphere.rs
