[package]
name        = "dasom"
version     = "0.1.0"
authors     = ["POMMI3R <kimhappy@hanyang.ac.kr>"]
edition     = "2018"
description = "A toy ray tracing engine based on Ray Tracing In One Weekend in Rust."
license     = "MIT OR Apache-2.0"

[dependencies]
nalgebra     = "^0.24.1"
indicatif    = "^0.15.0"
overload     = "^0.1.1"
rand         = "^0.8.3"
rayon        = "^1.5.0"